force-app/main/default/objects/Record_Processing_Request__c/Record_Processing_Request__c.object-meta.xml
<CustomObject>
    <label>Record Processing Request</label>
    <nameField>
        <displayFormat>RPR-{0000000000}</displayFormat>
        <label>Record Processing Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Processing Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>