force-app/main/default/objects/Record_Processing_Request__c/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <label>Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>