force-app/main/default/objects/Record_Processing_Request__c/fields/Input_Payload__c.field-meta.xml
<CustomField>
    <fullName>Input_Payload__c</fullName>
    <label>Input Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>