force-app/main/default/objects/Record_Processing_Request__c/fields/Output_Payload__c.field-meta.xml
<CustomField>
    <fullName>Output_Payload__c</fullName>
    <label>Output Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>