force-app/main/default/objects/Record_Processing_Request__c/fields/Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_Type__c</fullName>
    <label>Process Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>