force-app/main/default/objects/Record_Processing_Request__c/fields/Record_To_Process_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_To_Process_Id__c</fullName>
    <label>Record to Process Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>