force-app/main/default/objects/Record_Processing_Request__c/fields/Record_To_Process_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_To_Process_Link__c</fullName>
    <formula>HYPERLINK( &apos;/&apos; +  Record_To_Process_Id__c, &apos;Record to Process: Link&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record to Process</label>
    <type>Text</type>
</CustomField>