force-app/main/default/objects/Record_Processing_Request__c/fields/Request_Mechanism__c.field-meta.xml
<CustomField>
    <fullName>Request_Mechanism__c</fullName>
    <label>Request Mechanism</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAME_TRANSACTION</fullName>
                <default>true</default>
                <label>Same Transaction</label>
            </value>
            <value>
                <fullName>CHANGE_EVENT</fullName>
                <label>Change Event</label>
            </value>
            <value>
                <fullName>QUEUEABLE</fullName>
                <label>Queueable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>