force-app/main/default/objects/Record_Processing_Request__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <description>When a transient error has occurred, and the request mechanism allows it, will record the number of times this record has had its processing retried.</description>
    <inlineHelpText>When a transient error has occurred, and the request mechanism allows it, will record the number of times this record has had its processing retried.</inlineHelpText>
    <label>Retry Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>