force-app/main/default/objects/Record_Processing_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>PROCESSED</fullName>
                <label>Processed</label>
            </value>
            <value>
                <fullName>ERRORED</fullName>
                <label>Errored</label>
            </value>
            <value>
                <fullName>TRANSIENT_ERRORED</fullName>
                <label>Transient Errored</label>
            </value>
            <value>
                <fullName>TRANSIENT_ERRORED_MAXIMUM_RETRY</fullName>
                <label>Transient Errored - Maximum Retry Limit Reached</label>
            </value>
            <value>
                <fullName>SKIPPED</fullName>
                <label>Skipped</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>