force-app/main/default/objects/Record_Processing_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Record_To_Process_Id__c</columns>
    <columns>Record_To_Process_Link__c</columns>
    <columns>Request_Mechanism__c</columns>
    <columns>Process_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Processing_Started__c</columns>
    <columns>Processing_Finished__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>